Initially make the development icon description not visible to ensure jquery toggle functionality between the icon and description works

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,6 @@ font-family: 'PT Sans Narrow', sans-serif;
 .designdescription {
   display: none;
 }
+.developmentdescription {
+  display: none;
+}
